--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;600;700&display=swap");
+
+body {
+  font-family: "League Spartan", Arial, sans-serif;
+}
+
+.paytoneOne {
+  font-family: "Paytone One", Arial, sans-serif;
+}
