--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,7 @@
 @custom-variant dark (&:is(.dark *));
 
 body {
-  font-family: "League Spartan", Arial, sans-serif;
-}
-
-.paytoneOne {
-  font-family: "Paytone One", Arial, sans-serif;
+  font-family: "Inter Variable", sans-serif;
 }
 
 @theme inline {
@@ -48,6 +44,10 @@ body {
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+}
+
+@theme {
+  --font-inter: "Inter Variable", sans-serif;
 }
 
 :root {
